Filter Dropdown Hotfix

--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@
                     });
                 }
                 applyFiltersAndSearch();
+                populateFilterDropdowns();
                 populateModalDropdowns();
                 populateEmployeeDropdown();
                 renderOverviewCharts();
@@ -1572,4 +1573,5 @@
     
 </body>
 </html>
+
 
