Radial Menu Update

--- a/index.html
+++ b/index.html
@@ -515,6 +515,13 @@
         </div>
     </div>
 
+    <div id="radial-menu" class="radial-menu hidden">
+        <div class="menu-item" id="radial-rename">Rename</div>
+        <div class="menu-item" id="radial-rotate">Rotate</div>
+        <div class="menu-item" id="radial-open">Open</div>
+        <div class="menu-item" id="radial-resize">Resize</div>
+    </div>
+
 
     <script src="JS/script.js"></script>
     <script src="JS/visual_inventory_logic.js"></script>
