Radial Menu Enhancement

--- a/index.html
+++ b/index.html
@@ -516,10 +516,12 @@
     </div>
 
     <div id="radial-menu" class="radial-menu hidden">
-        <div class="menu-item" id="radial-rename">Rename</div>
-        <div class="menu-item" id="radial-rotate">Rotate</div>
-        <div class="menu-item" id="radial-open">Open</div>
-        <div class="menu-item" id="radial-resize">Resize</div>
+        <img src="SVG/Circle Background.SVG" class="radial-bg" alt="Menu Background">
+        <img src="SVG/Rename.SVG" class="radial-button" id="radial-rename" alt="Rename">
+        <img src="SVG/Rotate.SVG" class="radial-button" id="radial-rotate" alt="Rotate">
+        <img src="SVG/Resize.SVG" class="radial-button" id="radial-resize" alt="Resize">
+        <img src="SVG/Open.SVG" class="radial-button" id="radial-open" alt="Open">
+        <img src="SVG/Delete Button.SVG" class="radial-button" id="radial-delete" alt="Delete">
     </div>
 
 
@@ -530,3 +532,4 @@
     
 </body>
 </html>
+
