--- a/index.html
+++ b/index.html
@@ -516,12 +516,12 @@
     </div>
 
     <div id="radial-menu" class="radial-menu hidden">
-        <img src="./SVG/Circle-Background.SVG" class="radial-bg" alt="Menu Background">
-        <img src="./SVG/Rename.SVG" class="radial-button" id="radial-rename" alt="Rename">
-        <img src="./SVG/Rotate.SVG" class="radial-button" id="radial-rotate" alt="Rotate">
-        <img src="./SVG/Resize.SVG" class="radial-button" id="radial-resize" alt="Resize">
-        <img src="./SVG/Open.SVG" class="radial-button" id="radial-open" alt="Open">
-        <img src="./SVG/Delete-Button.SVG" class="radial-button" id="radial-delete" alt="Delete">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Circle-Background.SVG" class="radial-bg" alt="Menu Background">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Rename.SVG" class="radial-button" id="radial-rename" alt="Rename">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Rotate.SVG" class="radial-button" id="radial-rotate" alt="Rotate">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Resize.SVG" class="radial-button" id="radial-resize" alt="Resize">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Open.SVG" class="radial-button" id="radial-open" alt="Open">
+        <img src="https://raw.githubusercontent.com/jheitman-bgch/bgch-dashboard/main/SVG/Delete-Button.SVG" class="radial-button" id="radial-delete" alt="Delete">
     </div>
 
 
