--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             <path fill="#282828" d="M334.84,338.76l69.32,69.32c-41.48,40.45-96.18,62.72-154.16,62.72s-112.68-22.26-154.16-62.72l69.32-69.32c22.95,21.95,53.04,34.03,84.84,34.03s61.89-12.08,84.84-34.03M334.85,337.36c-21.93,21.31-51.86,34.43-84.85,34.43s-62.92-13.12-84.85-34.43l-70.73,70.73c40.04,39.4,94.97,63.71,155.58,63.71s115.54-24.31,155.58-63.71l-70.73-70.73h0Z"/>
           </g>
           <g fill="#282828" font-family="MyriadPro-Regular, 'Myriad Pro'" font-size="60.74px" transform="scale(.92 1)">
-              <text transform="translate(144.7 411.28) rotate(27.73)">R</text>
-              <text transform="translate(175.87 427.11) rotate(17.84)">e</text>
-              <text transform="translate(207.21 436.9) rotate(7.64)">n</text>
-              <text transform="translate(242.65 441.07) rotate(-2.27)">a</text>
-              <text transform="translate(275.69 440.19) rotate(-14.96)">m</text>
-              <text transform="translate(325.96 425.02) rotate(-27.53)">e</text>
+              <!-- Adjusted the x-coordinate in each translate() to center the text -->
+              <text transform="translate(158.7 411.28) rotate(27.73)">R</text>
+              <text transform="translate(189.87 427.11) rotate(17.84)">e</text>
+              <text transform="translate(221.21 436.9) rotate(7.64)">n</text>
+              <text transform="translate(256.65 441.07) rotate(-2.27)">a</text>
+              <text transform="translate(289.69 440.19) rotate(-14.96)">m</text>
+              <text transform="translate(339.96 425.02) rotate(-27.53)">e</text>
           </g>
         </symbol>
         
@@ -620,4 +621,5 @@
     
 </body>
 </html>
+
 
